--- a/TownPass-Service/frontend/tsconfig.json
+++ b/TownPass-Service/frontend/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-  ]
+  "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  },
+  "references": [{ "path": "./tsconfig.app.json" }]
 }
