--- a/TownPass-Service/backend/package.json
+++ b/TownPass-Service/backend/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "license": "MIT",
   "dependencies": {
+    "@google/generative-ai": "^0.17.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
