--- a/TownPass-Service/package.json
+++ b/TownPass-Service/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.17.1",
+    "framer-motion": "^11.5.4",
     "react-router-dom": "^6.26.1"
   }
 }
