--- a/TownPass-Service/frontend/package.json
+++ b/TownPass-Service/frontend/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@vis.gl/react-google-maps": "^1.1.2",
     "axios": "^1.7.5",
     "class-variance-authority": "^0.7.0",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/google.maps": "^3.58.0",
     "@types/node": "^22.5.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
