--- a/TownPass-Service/frontend/package.json
+++ b/TownPass-Service/frontend/package.json
@@ -21,9 +21,11 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@vis.gl/react-google-maps": "^1.1.2",
     "axios": "^1.7.5",
+    "@google/generative-ai": "^0.17.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.439.0",
+    "framer-motion": "^11.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
