--- a/TownPass-Service/backend/package.json
+++ b/TownPass-Service/backend/package.json
@@ -10,7 +10,8 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
     "express": "^4.19.2",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "uuid": "^10.0.0"
   },
   "scripts": {
     "start": "tsx src/index.ts",
